fixed text-align for IE

--- a/content/css/screen.sass
+++ b/content/css/screen.sass
@@ -32,6 +32,7 @@ body.bp
 
 body.three-col
   //+showgrid("/images/grid.png")
+  :text-align left
   #container
     +container
     +prepend-top
@@ -50,7 +51,8 @@ body.three-col
     img
       :height 324px
       :width 594px
-    
+
+// http://www.colourlovers.com/palette/9145/Cappucino  
 body.three-col
   :background-color #EBDDC0
   .box
